<resources>
    <string name="app_name">1170381-SaleemHamo-Project-MovieApp</string>
    <string name="movienet">MOVIENET</string>
    <string name="movie_library">Movie Library</string>
    <string name="load_data">Load Data</string>
    <string name="this_application_is_made_as_a_hypothetical_movie_library_app_for_encs515_lab_saleem_hamo_n1170381">This Application is made as a hypothetical movie library app for ENCS515 Lab Saleem Hamo \n1170381</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="to_review_movies_n_please_login_here_or_create_your_account">To Review Movies\n please Login here or Create your account</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Signup</string>
    <string name="register_here">Register Here</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="movie_list">Movie List</string>
    <string name="watch_list">Watch List</string>
    <string name="profile">Profile</string>
    <string name="rated_list">Rated List</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="duration">Duration</string>
    <string name="add_to_watch_list">Add To Watch List</string>
    <string name="rate">Rate</string>
    <string name="genres">Genres</string>
    <string name="imdb_rating">Imdb Rating</string>
    <string name="releasedate">ReleaseDate</string>
    <string name="title">Title</string>
    <string name="remember_me">Remember Me</string>
    <string name="back_to_login">Back TO LOGIN</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="go_ahead_we_are_listening">Go ahead, We are listening...</string>
    <string name="what_is_it_about">What is it about?</string>
    <string name="submit">Submit</string>
    <string name="image">image</string>
    <string name="open_filter">Open Filter</string>
    <string name="dash">-</string>
    <string name="search">Search</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="imdp_rating">IMDP Rating</string>
    <string name="open_filter_cap">OPEN FILTER</string>
    <string name="light_night_mode">Light/Night Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="night_mode">Night Mode</string>
    <string-array name="gender_values">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>