<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--        <item-->
        <!--            android:id="@+id/nav_home"-->
        <!--            android:icon="@drawable/ic_menu_camera"-->
        <!--            android:title="@string/menu_home" />-->
        <item
            android:id="@+id/nav_movie_list"
            android:icon="@drawable/ic_movie_list"
            android:title="@string/movie_list" />
        <item
            android:id="@+id/nav_watch_list"
            android:icon="@drawable/ic_baseline_watch_list"
            android:title="@string/watch_list" />
        <item
            android:id="@+id/nav_rated_list"
            android:icon="@drawable/ic_baseline_rate_review"
            android:title="@string/rated_list" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_contact_us"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_log_out"
            android:title="@string/logout" />
    </group>
</menu>