<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    android:textColor="@color/colorText"
    android:backgroundTint="@color/colorBackground"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutForm"
        android:layout_width="377dp"
        android:layout_height="535dp"
        android:background="#1C1C1C"
        android:textColor="@color/colorText"
        android:backgroundTint="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.603">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="302dp"
            android:layout_height="57dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress|textPersonName"
            android:textColor="#737373"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.442"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.255" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="302dp"
            android:layout_height="57dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#737373"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.395" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="302dp"
            android:layout_height="55dp"
            android:background="#CB0202"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.595" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="295dp"
            android:layout_height="73dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorText"
            android:backgroundTint="@color/colorBackground"
            android:text="@string/to_review_movies_n_please_login_here_or_create_your_account"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.032" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="255dp"
            android:layout_height="54dp"
            android:background="#171717"
            android:text="@string/create_account"
            android:textColor="@color/colorText"
            android:backgroundTint="@color/colorBackground"            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.868"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.731" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="151dp"
            android:layout_height="37dp"
            android:text="@string/remember_me"
            android:background="@color/colorBackground"
            android:textColor="@color/colorText"
            app:buttonTint="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="329dp"
        android:layout_height="57dp"
        android:fontFamily="@font/gravitas_one"
        android:text="@string/movienet"
        android:textAlignment="center"
        android:textColor="#CB0202"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

</androidx.constraintlayout.widget.ConstraintLayout>