<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="415dp"
        android:layout_height="326dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        android:background="@color/colorBackground"
        android:textColor="@color/colorText"

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutMovie"
            android:layout_width="match_parent"
            android:layout_height="326dp"
            android:background="@color/colorBackground"
            android:textColor="@color/colorText">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="139dp"
                android:layout_height="160dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/textViewReleaseDate"
                android:layout_width="218dp"
                android:layout_height="25dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="44dp"
                android:background="@color/colorBackground"
                android:fontFamily="sans-serif-medium"
                android:text="@string/releasedate"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textViewGenres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewWatchTitle" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="218dp"
                android:layout_height="25dp"
                android:layout_marginStart="154dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorBackground"
                android:fontFamily="sans-serif-medium"
                android:text="@string/title"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textViewReleaseDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.035"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="104dp"
                android:layout_height="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:background="@color/colorBackground"
                android:fontFamily="sans-serif-medium"
                android:text="@string/imdb_rating"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate" />

            <TextView
                android:id="@+id/textViewDuration"
                android:layout_width="104dp"
                android:layout_height="25dp"
                android:layout_marginTop="12dp"
                android:background="@color/colorBackground"
                android:fontFamily="sans-serif-medium"
                android:text="@string/duration"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/textViewRating"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewReleaseDate"
                app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate" />

            <TextView
                android:id="@+id/textViewGenres"
                android:layout_width="215dp"
                android:layout_height="55dp"
                android:layout_marginBottom="148dp"
                android:background="@color/colorBackground"

                android:fontFamily="sans-serif-medium"
                android:text="@string/genres"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewDuration" />

            <Button
                android:id="@+id/buttonAddToWatchList"
                android:layout_width="171dp"
                android:layout_height="55dp"
                android:layout_marginStart="185dp"
                android:onClick="addToWatchList"
                android:text="@string/add_to_watch_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.255"
                app:layout_constraintStart_toStartOf="@+id/buttonRate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.963" />

            <Button
                android:id="@+id/buttonRate"
                android:layout_width="171dp"
                android:layout_height="55dp"
                android:text="@string/rate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.963" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.713" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>